@@ -192,11 +192,28 @@ Example:
 sub process
 {
     my $self = shift;
-   
+    my $hash = undef;
+    if (@_ == 1 and ref $_[0] eq 'HASH')
+    {
+	my $tied = tied %{$_[0]};
+	if ($tied and ref $tied eq 'Petal::Hash')
+	{
+	    $hash = new Petal::Hash (%{$tied});
+	}
+	else
+	{
+	    $hash = new Petal::Hash (%{$_[0]});
+	}
+    }
+    else
+    {
+	$hash = new Petal::Hash (@_);
+    }
+    
     # make the hash highly magical
-    my $hash = (@_ == 1 and ref $_[0] eq 'HASH') ?
-        new Petal::Hash (%{$_[0]}) :
-        new Petal::Hash (@_);
+    #my $hash = (@_ == 1 and ref $_[0] eq 'HASH') ?
+    #    new Petal::Hash (%{$_[0]}) :
+    #    new Petal::Hash (@_);
     
     my $coderef = $self->_code_memory_cached;
     my $res = undef;
