@@ -8,7 +8,7 @@
 use lib ('lib');
 use Test;
 
-BEGIN {print "1..4\n";}
+BEGIN {print "1..6\n";}
 END {print "not ok 1\n" unless $loaded;}
 use Petal;
 $loaded = 1;
@@ -29,8 +29,10 @@ my $petal = new Petal ('index.xml');
 # ($petal->_file_path =~ /\/t\/data\/include$/) ? print "ok 2\n" : (print "not ok 2\n" and exit);
 print "ok 2\n";
 
-($petal->process =~ /__INCLUDED__/) ? print "ok 3\n" : print "not ok 3\n";
-($petal->process =~ /__INCLUDED__\s+<\/body>/) ? print "not ok 4\n" : print "ok 4\n";
+(${$petal->_canonicalize()} =~ /World\"\"/) ? print "not ok 3\n" : print "ok 3\n";
+($petal->process =~ /__INCLUDED__/) ? print "ok 4\n" : print "not ok 4\n";
+($petal->process =~ /__INCLUDED__\s+<\/body>/) ? print "not ok 5\n" : print "ok 5\n";
+($petal->process =~ /Hello, \&quot\;World\&quot\;/) ? print "ok 6\n" : print "not ok 6\n";
 
 1;
 
