@@ -1,4 +1,5 @@
 <div>
   <p>__INCLUDED__</p>
   <p>__INCLUDED__</p>
+  <p>$test_encoding</p>
 </div>
