@@ -2,6 +2,9 @@ Revision history for Petal.
 
 0.74
 	- Done some more optimization on Petal::Hash
+	- Fixed petal:set='foo string:"Hello"' bug
+	- Fixed double encoding on set + includes issue
+	- Added tests as always
 
 0.73 Wed Sep 25 12:05:01 2002
 	- Implemented TIED hash caching
